--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,8 @@ commands = python -m pip install --upgrade pip
 deps =
     -rrequirements.txt
     pytest
+    pytest-asyncio
+    aioresponses
 commands = python -m pytest --basetemp={envtmpdir} {posargs}
 
 [testenv:linting]
@@ -24,7 +26,7 @@ deps =
     pylint
     # add your fixtures like e.g. pytest_datafiles here
 commands =
-    pylint mymodule.py
+    pylint src
     # add single files (ending with .py) or packages here
 
 [testenv:type_check]
