--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,8 @@ deps =
     -rrequirements.txt
     mypy
 commands =
-    mypy --show-error-codes mymodule.py
+    mypy --show-error-codes src
+    mypy --show-error-codes unittests
     # add single files (ending with .py) or packages here
 
 [testenv:coverage]
