--- a/tox.ini
+++ b/tox.ini
@@ -6,11 +6,13 @@ envlist =
      type_check
 skip_missing_interpreters = True
 skipsdist = True
+isolated_build = True
 
 [testenv]
 commands = python -m pip install --upgrade pip
 
 [testenv:tests]
+usedevelop = True
 # the tests environment is called by the Github action that runs the unit tests
 deps =
     -rrequirements.txt
@@ -30,6 +32,7 @@ commands =
     # add single files (ending with .py) or packages here
 
 [testenv:type_check]
+usedevelop = True
 # the type_check environment checks the type hints using mypy
 deps =
     -rrequirements.txt
@@ -66,3 +69,12 @@ commands =
     pip-compile requirements.in
     pip install -r requirements.txt
     pre-commit install
+
+[testenv:test_packaging]
+skip_install = true
+deps =
+    build
+    twine
+commands =
+    python -m build
+    twine check dist/*
