--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,7 @@ commands =
     # add single files (ending with .py) or packages here
 
 [testenv:coverage]
+usedevelop = True
 # the coverage environment is called by the Github Action that runs the coverage measurement
 deps =
     {[testenv:tests]deps}
@@ -50,7 +51,7 @@ deps =
 commands =
     coverage run -m pytest --basetemp={envtmpdir} {posargs}
     coverage html --omit .tox/*,unittests/*
-    coverage report --fail-under 80 --omit .tox/*,unittests/*
+    coverage report --fail-under 100 --omit .tox/*,unittests/*
 
 
 [testenv:dev]
