--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,8 @@ zip_safe = False
 include_package_data = True
 python_requires = >=3.8
 install_requires =
-    # write here line by line the dependencies for your package
+    ahbicht
+    aiohttp
 
 [options.packages.find]
 where = src
